terraform/k3s-galenguyer-01.tf
resource "azurerm_public_ip" "k3s-galenguyer-01-ip" {
 name                         = "k3s-galenguyer-01-ip"
 location                     = "East US"
 resource_group_name          = azurerm_resource_group.k3s.name
 allocation_method            = "Static"
 domain_name_label            = "k3s-galenguyer-01"
}

resource "azurerm_network_interface" "k3s-galenguyer-01-nic" {
    name                        = "k3s-galenguyer-01-nic"
    location                    = "eastus"
    resource_group_name         = azurerm_resource_group.k3s.name

    ip_configuration {
        name                          = "k3s-galenguyer-01-nic-config"
        subnet_id                     = azurerm_subnet.k3s-galenguyer-subnet.id
        private_ip_address_allocation = "Dynamic"
        public_ip_address_id          = azurerm_public_ip.k3s-galenguyer-01-ip.id
    }
}

resource "azurerm_network_interface_security_group_association" "k3s-galenguyer-01-nic-nsg-association" {
    network_interface_id      = azurerm_network_interface.k3s-galenguyer-01-nic.id
    network_security_group_id = azurerm_network_security_group.k3s-galenguyer-nsg.id
}

resource "azurerm_linux_virtual_machine" "k3s-galenguyer-01" {
    name                  = "k3s-galenguyer-01"
    location              = "eastus"
    resource_group_name   = azurerm_resource_group.k3s.name
    network_interface_ids = [azurerm_network_interface.k3s-galenguyer-01-nic.id]
    size                  = "Standard_B1s"

    os_disk {
        name                 = "k3s-galenguyer-01-osdisk"
        caching              = "ReadWrite"
        storage_account_type = "Standard_LRS"
    }

    source_image_reference {
        publisher = "Debian"
        offer     = "debian-10"
        sku       = "10"
        version   = "latest"
    }

    admin_username = "chef"
    disable_password_authentication = true

    admin_ssh_key {
        username       = "chef"
        public_key = file("~/.ssh/id_rsa.pub")
    }
}
